less
   Compiling slots v0.1.0 (/home/hans/rust/slots)
error: the `async` keyword is missing from the function declaration
  --> src/main.rs:61:1
   |
61 | fn main() {
   | ^^

warning: unused import: `SystemTime`
 --> src/main.rs:7:27
  |
7 | use std::time::{Duration, SystemTime};
  |                           ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::thread::sleep`
  --> src/main.rs:10:5
   |
10 | use std::thread::sleep;
   |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `style`
  --> src/main.rs:11:23
   |
11 | use termion::{cursor, style};
   |                       ^^^^^

warning: denote infinite loops with `loop { ... }`
  --> src/main.rs:87:9
   |
87 |         while true {
   |         ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0267]: `break` inside `async` block
  --> src/main.rs:77:25
   |
60 | #[tokio::main]
   | -------------- enclosing `async` block
...
77 |                         break;
   |                         ^^^^^ cannot `break` inside `async` block

error[E0267]: `break` inside `async` block
  --> src/main.rs:81:25
   |
60 | #[tokio::main]
   | -------------- enclosing `async` block
...
81 |                         break;
   |                         ^^^^^ cannot `break` inside `async` block

warning: use of deprecated function `rand::thread_rng`: renamed to `rng`
  --> src/main.rs:89:33
   |
89 |             let mut rng = rand::thread_rng();
   |                                 ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `rand::Rng::gen_range`: Renamed to `random_range`
  --> src/main.rs:94:39
   |
94 |                 let mut rand_nr = rng.gen_range(1..=reels);
   |                                       ^^^^^^^^^

For more information about this error, try `rustc --explain E0267`.
warning: `slots` (bin "slots") generated 6 warnings
error: could not compile `slots` (bin "slots") due to 3 previous errors; 6 warnings emitted
